--- a/nvme_rockylinux_84.adoc
+++ b/nvme_rockylinux_84.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
 permalink: nvme_rockylinux_84.html
-keywords: nvme, linux, rhel, red hat, enterprise
-summary: How to Configure NVMe-oF Host for RHEL 8.4 with ONTAP
+keywords: nvme, linux, rocky linux, enterprise
+summary: How to Configure NVMe-oF Host for Rocky Linux 8.4 with ONTAP
 ---
 
-= NVMe-oF Host Configuration for RHEL 8.4 with ONTAP
+= NVMe-oF Host Configuration for Rocky Linux 8.4 with ONTAP
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8.4 with ONTAP
 
 [.lead]
 
-NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with Red Hat Enterprise Linux (RHEL) 8.4 with ANA (Asymmetric Namespace Access). ANA is the asymmetric logical unit access (ALUA) equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. You can enable NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.4 and ONTAP as the target.
+NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with Rocky Linux 8.4 with ANA (Asymmetric Namespace Access). ANA is the asymmetric logical unit access (ALUA) equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. You can enable NVMe-oF with in-kernel NVMe Multipath using ANA on Rocky Linux 8.4 and ONTAP as the target.
 
 == Features
 
@@ -23,9 +23,9 @@ There are no new features in this release.
 
 == Known limitations
 
-* For RHEL 8.4, in-kernel NVMe multipath is disabled by default. Therefore, you need to enable it manually.
+* For Rocky Linux 8.4, in-kernel NVMe multipath is disabled by default. Therefore, you need to enable it manually.
 
-* NVMe/TCP on RHEL 8.4 remains a Technology Preview feature due to open issues. Refer to the https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html-single/8.4_release_notes/index#technology-preview_file-systems-and-storage[RHEL 8.4 Release Notes^] for details.
+* NVMe/TCP on Rocky Linux 8.4 remains a Technology Preview feature due to open issues. Refer to the https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html-single/8.4_release_notes/index#technology-preview_file-systems-and-storage[Rocky Linux 8.4 Release Notes^] for details.
 
 * SAN booting using the NVMe-oF protocol is currently not supported.
 
@@ -35,9 +35,9 @@ You can use the following procedure to enable in-kernel NVMe multipath.
 
 .Steps
 
-.	Install RHEL 8.4 GA on the server. 
+.	Install Rocky Linux 8.4 GA on the server. 
 
-.	After the installation is complete, verify that you are running the specified RHEL 8.4 kernel. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
+.	After the installation is complete, verify that you are running the specified Rocky Linux 8.4 kernel. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
 +
 Example:
 +
@@ -171,7 +171,7 @@ FCP CMPL: xb 00001f50 Err 0000d9f8
 --
 .Marvell/QLogic FC adapter for NVMe/FC
 --
-The native inbox `qla2xxx` driver included in the RHEL 8.4 GA kernel has the latest fixes. These fixes are essential for ONTAP support.
+The native inbox `qla2xxx` driver included in the Rocky Linux 8.4 GA kernel has the latest fixes. These fixes are essential for ONTAP support.
 
 .Steps
 
