--- a/nvme_rockylinux_86.adoc
+++ b/nvme_rockylinux_86.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
 permalink: nvme_rockylinux_86.html
-keywords: nvme, linux, rhel, red hat, enterprise
-summary: How to Configure NVMe-oF Host for RHEL 8.6 with ONTAP
+keywords: nvme, linux, rocky linux, enterprise
+summary: How to Configure NVMe-oF Host for Rocky Linux 8.6 with ONTAP
 ---
 
-= NVMe-oF host configuration for RHEL 8.6 with ONTAP
+= NVMe-oF host configuration for Rocky Linux 8.6 with ONTAP
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -14,20 +14,20 @@ summary: How to Configure NVMe-oF Host for RHEL 8.6 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with Red Hat Enterprise Linux (RHEL) 8.6 with ANA (Asymmetric Namespace Access). ANA is the asymmetric logical unit access (ALUA) equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. During this procedure, you enable NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.6 and ONTAP as the target
+NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with Rocky Linux 8.6 with ANA (Asymmetric Namespace Access). ANA is the asymmetric logical unit access (ALUA) equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. During this procedure, you enable NVMe-oF with in-kernel NVMe Multipath using ANA on Rocky Linux 8.6 and ONTAP as the target
 
 See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for accurate details regarding supported configurations.
 
 == Features
 
-* RHEL 8.6 includes support for NVMe/TCP (as a Technology Preview feature) in addition to NVMe/FC. The NetApp plugin in the native nvme-cli package is capable of displaying ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
+* Rocky Linux 8.6 includes support for NVMe/TCP (as a Technology Preview feature) in addition to NVMe/FC. The NetApp plugin in the native nvme-cli package is capable of displaying ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 
 
 == Known limitations
 
-* For RHEL 8.6, in-kernel NVMe multipath remains disabled by default. Therefore, you need to enable it manually.
+* For Rocky Linux 8.6, in-kernel NVMe multipath remains disabled by default. Therefore, you need to enable it manually.
 
-* NVMe/TCP on RHEL 8.6 remains a Technology Preview feature due to open issues. Refer to the https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html-single/8.6_release_notes/index#technology-preview_file-systems-and-storage[RHEL 8.6 Release Notes^] for details.
+* NVMe/TCP on Rocky Linux 8.6 remains a Technology Preview feature due to open issues. Refer to the https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html-single/8.6_release_notes/index#technology-preview_file-systems-and-storage[Rocky Linux 8.6 Release Notes^] for details.
 
 * SAN booting using the NVMe-oF protocol is currently not supported.
 
@@ -38,9 +38,9 @@ You can use the following procedure to enable in-kernel NVMe multipath.
 
 .Steps
 
-.	Install RHEL 8.6 on the server. After the installation is complete, verify that you are running the specified RHEL 8.6 kernel. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
+.	Install Rocky Linux 8.6 on the server. After the installation is complete, verify that you are running the specified Rocky Linux 8.6 kernel. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
 
-.	After the installation is complete, verify that you are running the specified RHEL 8.6 kernel. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
+.	After the installation is complete, verify that you are running the specified Rocky Linux 8.6 kernel. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
 +
 Example:
 +
@@ -179,7 +179,7 @@ FCP CMPL: xb 00001f50 Err 0000d9f8
 
 .Marvell/QLogic FC adapter for NVMe/FC
 --
-The native inbox `qla2xxx` driver included in the RHEL 8.6 kernel has the latest upstream fixes. These fixes are essential for ONTAP support.
+The native inbox `qla2xxx` driver included in the Rocky Linux 8.6 kernel has the latest upstream fixes. These fixes are essential for ONTAP support.
 
 .Steps
 . Verify that you are running the supported adapter driver and firmware versions:
@@ -351,13 +351,13 @@ NSID  UUID                                   Size
 
 == Known issues 
 
-The NVMe-oF host configuration for RHEL 8.6 with ONTAP has the following known issues:
+The NVMe-oF host configuration for Rocky Linux 8.6 with ONTAP has the following known issues:
 
 [cols="20,40,40",options="header"]
 |===
 |NetApp Bug ID	|Title	|Description	
 
-|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047^]	|RHEL 8.6 NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running ONTAP 9.10.1 and Red Hat Enterprise Linux (RHEL) 8.6 with an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
+|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047^]	|Rocky Linux 8.6 NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running ONTAP 9.10.1 and Rocky Linux 8.6 with an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
 
 |===
 
