--- a/nvme_rockylinux_87.adoc
+++ b/nvme_rockylinux_87.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
 permalink: nvme_rockylinux_87.html
-keywords: nvme, linux, rhel, red hat, enterprise
-summary: How to Configure NVMe-oF Host for RHEL 8.7 with ONTAP
+keywords: nvme, linux, rocky linux, enterprise
+summary: How to Configure NVMe-oF Host for Rocky Linux 8.7 with ONTAP
 ---
 
-= NVMe-oF host configuration for RHEL 8.7 with ONTAP
+= NVMe-oF host configuration for Rocky Linux 8.7 with ONTAP
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -14,19 +14,19 @@ summary: How to Configure NVMe-oF Host for RHEL 8.7 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with Red Hat Enterprise Linux (RHEL) 8.7 with ANA (Asymmetric Namespace Access). ANA is the asymmetric logical unit access (ALUA) equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. During this procedure, you enable NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 8.7 and ONTAP as the target.
+NVMe over Fabrics or NVMe-oF (including NVMe/FC and other transports) is supported with Rocky Linux 8.7 with ANA (Asymmetric Namespace Access). ANA is the asymmetric logical unit access (ALUA) equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. During this procedure, you enable NVMe-oF with in-kernel NVMe Multipath using ANA on Rocky Linux 8.7 and ONTAP as the target.
 
 See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for accurate details regarding supported configurations.
 
 == Features
 
-RHEL 8.7 includes support for NVMe/TCP (as a Technology Preview feature) in addition to NVMe/FC. The NetApp plugin in the native nvme-cli package is capable of displaying ONTAP details for both NVMe/FC and NVMe/TCP namespaces. 
+Rocky Linux 8.7 includes support for NVMe/TCP (as a Technology Preview feature) in addition to NVMe/FC. The NetApp plugin in the native nvme-cli package is capable of displaying ONTAP details for both NVMe/FC and NVMe/TCP namespaces. 
 
 == Known limitations
 
-* For RHEL 8.7, in-kernel NVMe multipath remains disabled by default. Therefore, you need to enable it manually. 
+* For Rocky Linux 8.7, in-kernel NVMe multipath remains disabled by default. Therefore, you need to enable it manually. 
 
-* NVMe/TCP on RHEL 8.7 remains a Technology Preview feature due to open issues. Refer to the link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html/8.7_release_notes/index[RHEL 8.7 release notes^] for details. 
+* NVMe/TCP on Rocky Linux 8.7 remains a Technology Preview feature due to open issues. Refer to the link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html/8.7_release_notes/index[Rocky Linux 8.7 release notes^] for details. 
 
 * SAN booting using the NVMe-oF protocol is currently not supported.
 
@@ -37,9 +37,9 @@ You can use the following procedure to enable in-kernel NVMe multipath.
 
 .Steps
 
-.	Install RHEL 8.7 on the server. 
+.	Install Rocky Linux 8.7 on the server. 
 
-.	After the installation is complete, verify that you are running the specified RHEL 8.7 kernel. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
+.	After the installation is complete, verify that you are running the specified Rocky Linux 8.7 kernel. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
 +
 Example:
 +
@@ -79,7 +79,7 @@ nvme-cli-1.16-5.el8.x86_64
 ::> vserver nvme subsystem host show -vserver vs_nvme167 
 Vserver     Subsystem       Host NQN
 ----------- --------------- ----------------
-vs_nvme167 rhel_167_LPe35002  nqn.2014-08.org.nvmexpress:uuid: a7f7a1d4-311a-11e8-b634-7ed30aef10b7 
+vs_nvme167 rockylinux_167_LPe35002  nqn.2014-08.org.nvmexpress:uuid: a7f7a1d4-311a-11e8-b634-7ed30aef10b7 
 
 ----
 +
@@ -183,7 +183,7 @@ FCP CMPL: xb 0000006b Err 00017f99
 .Marvell/QLogic FC adapter for NVMe/FC
 --
 
-The native inbox `qla2xxx` driver included in the RHEL 8.7 kernel has the latest fixes. These fixes are essential for ONTAP support.
+The native inbox `qla2xxx` driver included in the Rocky Linux 8.7 kernel has the latest fixes. These fixes are essential for ONTAP support.
 
 .Steps
 . Verify that you are running the supported adapter driver and firmware versions using the following command:
@@ -270,7 +270,7 @@ subtype: nvme subsystem
 treq:    not specified 
 portid:  0 
 trsvcid: 4420 
-subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:subsystem.rhel_tcp_165 
+subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:subsystem.rockylinux_tcp_165 
 traddr:  192.168.211.15 
 sectype: none 
 =====Discovery Log Entry 5====== 
@@ -280,7 +280,7 @@ subtype: nvme subsystem
 treq:    not specified 
 portid:  1 
 trsvcid: 4420 
-subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:subsystem.rhel_tcp_165 
+subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:subsystem.rockylinux_tcp_165 
 traddr:  192.168.111.15 
 sectype: none 
 =====Discovery Log Entry 6====== 
@@ -291,7 +291,7 @@ subtype: nvme subsystem
 treq:    not specified 
 portid:  2 
 trsvcid: 4420 
-subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:subsystem.rhel_tcp_165 
+subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:subsystem.rockylinux_tcp_165 
 traddr:  192.168.211.14 
 sectype: none 
 
@@ -304,7 +304,7 @@ treq:    not specified
    portid:  3 
 
 trsvcid: 4420 
-subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:subsystem.rhel_tcp_165 
+subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:subsystem.rockylinux_tcp_165 
 traddr:  192.168.111.14 
 sectype: none 
 [root@R650-13-79 ~]# 
@@ -373,7 +373,7 @@ Usage                Format         FW Rev
 ----
 # nvme list-subsys /dev/nvme1n1 
 
-nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:subsystem.rhel_tcp_165 
+nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:subsystem.rockylinux_tcp_165 
 
 \ 
 
@@ -422,13 +422,13 @@ NSID  UUID                                   Size
 
 == Known issues 
 
-The NVMe-oF host configuration for RHEL 8.7 with ONTAP has the following known issues:
+The NVMe-oF host configuration for Rocky Linux 8.7 with ONTAP has the following known issues:
 
 [cols="20,40,40",options="header"]
 |===
 |NetApp Bug ID	|Title	|Description
 
-|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047^]	|RHEL 8.7 NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running ONTAP 9.10.1 and Red Hat Enterprise Linux (RHEL) 8.7 with an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
+|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047^]	|Rocky Linux 8.7 NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running ONTAP 9.10.1 and Rocky Linux 8.7 with an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
 |===
 
 // 2024 SEP 2, ONTAPDOC-2345
