--- a/nvme_rockylinux_90.adoc
+++ b/nvme_rockylinux_90.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
 permalink: nvme_rockylinux_90.html
-keywords: nvme, linux, rhel, red hat, enterprise
-summary: How to Configure NVMe-oF Host for RHEL 9.0 with ONTAP
+keywords: nvme, linux, rocky linux, enterprise
+summary: How to Configure NVMe-oF Host for Rocky Linux 9.0 with ONTAP
 ---
 
-= NVMe-oF host configuration for RHEL 9.0 with ONTAP
+= NVMe-oF host configuration for Rocky Linux 9.0 with ONTAP
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -15,14 +15,14 @@ summary: How to Configure NVMe-oF Host for RHEL 9.0 with ONTAP
 
 [.lead]
 
-NVMe-oF (including NVMe/FC and NVMe/TCP) is supported with RHEL 9.0 with Asymmetric Namespace Access (ANA) required for surviving storage failovers (SFOs) on the ONTAP array. ANA is the ALUA equivalent in the NVM-oF environment, and is currently implemented with in-kernel NVMe Multipath. Using this procedure, you can enable NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 9.0 and ONTAP as the target.
+NVMe-oF (including NVMe/FC and NVMe/TCP) is supported with Rocky Linux 9.0 with Asymmetric Namespace Access (ANA) required for surviving storage failovers (SFOs) on the ONTAP array. ANA is the ALUA equivalent in the NVM-oF environment, and is currently implemented with in-kernel NVMe Multipath. Using this procedure, you can enable NVMe-oF with in-kernel NVMe Multipath using ANA on Rocky Linux 9.0 and ONTAP as the target.
 
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
 == Features
 
-* Beginning with RHEL 9.0, NVMe/TCP is no longer a technology preview feature (unlike RHEL 8) but a fully supported enterprise feature itself.
-* Beginning with RHEL 9.0, in-kernel NVMe multipath is enabled for NVMe namespaces by default, without the need for explicit settings (unlike RHEL 8).
+* Beginning with Rocky Linux 9.0, NVMe/TCP is no longer a technology preview feature (unlike Rocky Linux 8) but a fully supported enterprise feature itself.
+* Beginning with Rocky Linux 9.0, in-kernel NVMe multipath is enabled for NVMe namespaces by default, without the need for explicit settings (unlike Rocky Linux 8).
 
 
 ==  Known limitations
@@ -35,9 +35,9 @@ SAN booting using the NVMe-oF protocol is currently not supported.
 You can use the following procedure to enable in-kernel NVMe multipath.
 
 .Steps
-. Install RHEL 9.0 on the server. 
+. Install Rocky Linux 9.0 on the server. 
 
-. After the installation is complete, verify that you are running the specified RHEL 9.0 kernel. See link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
+. After the installation is complete, verify that you are running the specified Rocky Linux 9.0 kernel. See link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
 +
 ----
 # uname -r
@@ -160,7 +160,7 @@ FCP CMPL: xb 00001f50 Err 0000d9f8
 .Marvell/QLogic
 --
 
-The native inbox qla2xxx driver included in the RHEL 9.0 kernel has the latest fixes. These fixes are essential for ONTAP support. 
+The native inbox qla2xxx driver included in the Rocky Linux 9.0 kernel has the latest fixes. These fixes are essential for ONTAP support. 
 
 .Steps
 
@@ -396,12 +396,12 @@ NSID   UUID                               Size
 
 == Known issues
 
-The NVMe-oF host configuration for RHEL 9.0 with ONTAP has the following known issues:
+The NVMe-oF host configuration for Rocky Linux 9.0 with ONTAP has the following known issues:
 
 [cols="20,40,40",options="header"]
 |===
 |NetApp Bug ID	|Title	|Description	
-|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047^]	|RHEL 9.0 NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running ONTAP 9.10.1 and Red Hat Enterprise Linux (RHEL) 9.0 with an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
+|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047^]	|Rocky Linux 9.0 NVMe-oF hosts create duplicate Persistent Discovery Controllers	|On NVMe over Fabrics (NVMe-oF) hosts, you can use the "nvme discover -p" command to create Persistent Discovery Controllers (PDCs). When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running ONTAP 9.10.1 and Rocky Linux 9.0 with an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
 
 |===
 
