--- a/nvme_rockylinux_91.adoc
+++ b/nvme_rockylinux_91.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
 permalink: nvme_rockylinux_91.html
-keywords: nvme, linux, rhel, red hat, enterprise
-summary: How to Configure NVMe-oF Host for RHEL 9.1 with ONTAP
+keywords: nvme, linux, rocky linux, enterprise
+summary: How to Configure NVMe-oF Host for Rocky Linux 9.1 with ONTAP
 ---
 
-= NVMe-oF host configuration for RHEL 9.1 with ONTAP
+= NVMe-oF host configuration for Rocky Linux 9.1 with ONTAP
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -15,9 +15,9 @@ summary: How to Configure NVMe-oF Host for RHEL 9.1 with ONTAP
 
 [.lead]
 
-NVMe over Fabrics or NVMe-oF (including NVMe/FC and NVMe/TCP) is supported with RHEL 9.1 with Asymmetric Namespace Access (ANA) that is required for surviving storage failovers (SFOs) on the ONTAP array. ANA is the asymmetric logical unit access (ALUA) equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. Using this procedure, you can enable NVMe-oF with in-kernel NVMe Multipath using ANA on RHEL 9.1 and ONTAP as the target.
+NVMe over Fabrics or NVMe-oF (including NVMe/FC and NVMe/TCP) is supported with Rocky Linux 9.1 with Asymmetric Namespace Access (ANA) that is required for surviving storage failovers (SFOs) on the ONTAP array. ANA is the asymmetric logical unit access (ALUA) equivalent in the NVMe-oF environment, and is currently implemented with in-kernel NVMe Multipath. Using this procedure, you can enable NVMe-oF with in-kernel NVMe Multipath using ANA on Rocky Linux 9.1 and ONTAP as the target.
 
-The following support is available for the NVMe-oF host configuration for RHEL 9.1 with ONTAP:
+The following support is available for the NVMe-oF host configuration for Rocky Linux 9.1 with ONTAP:
 
 * Support for NVMe over TCP (NVMe/TCP) in addition to NVMe/FC. The NetApp plug-in in the native nvme-cli package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 
@@ -28,7 +28,7 @@ Refer to the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix T
 
 == Features
 
-RHEL 9.1 includes support for in-kernel NVMe multipath for NVMe namespaces enabled by default, without the need for explicit settings.
+Rocky Linux 9.1 includes support for in-kernel NVMe multipath for NVMe namespaces enabled by default, without the need for explicit settings.
 
 == Known limitations
 
@@ -40,9 +40,9 @@ You can use the following procedure to enable in-kernel NVMe multipath.
 
 .Steps
 
-.	Install RHEL 9.1 on the server. 
+.	Install Rocky Linux 9.1 on the server. 
 
-.	After the installation is complete, verify that you are running the specified RHEL 9.1 kernel. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
+.	After the installation is complete, verify that you are running the specified Rocky Linux 9.1 kernel. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
 +
 Example:
 +
@@ -73,7 +73,7 @@ nqn.2014-08.org.nvmexpress:uuid:325e7554-1f9b-11ec-8489-3a68dd61a4df
 ::> vserver nvme subsystem host show -vserver vs_nvme207 
 Vserver     Subsystem       Host NQN
 ----------- --------------- ----------------------------------------------------------
-vs_nvme207 rhel_207_LPe32002     nqn.2014-08.org.nvmexpress:uuid:325e7554-1f9b-11ec-8489-3a68dd61a4df
+vs_nvme207 rockylinux_207_LPe32002     nqn.2014-08.org.nvmexpress:uuid:325e7554-1f9b-11ec-8489-3a68dd61a4df
 
 ----
 +
@@ -176,7 +176,7 @@ FCP CMPL: xb 00000000 Err 00000004
 
 .Marvell/QLogic FC adapter for NVMe/FC
 --
-The native inbox `qla2xxx` driver included in the RHEL 9.1 kernel has the latest fixes which are. These fixes are essential for ONTAP support.
+The native inbox `qla2xxx` driver included in the Rocky Linux 9.1 kernel has the latest fixes which are. These fixes are essential for ONTAP support.
 
 .Steps
 
@@ -313,7 +313,7 @@ Example (a):
 [subs=+quotes]
 ----
 # nvme list-subsys /dev/nvme0n1
-nvme-subsys10 - NQN=nqn.1992-08.com.netapp:sn.82e7f9edc72311ec8187d039ea14107d:subsystem.rhel_131_QLe2742
+nvme-subsys10 - NQN=nqn.1992-08.com.netapp:sn.82e7f9edc72311ec8187d039ea14107d:subsystem.rockylinux_131_QLe2742
 \
  +- nvme2 fc traddr=nn-0x2038d039ea1308e5:pn-0x2039d039ea1308e5,host_traddr=nn-0x20000024ff171d30:pn-0x21000024ff171d30 live non-optimized
  +- nvme3 fc traddr=nn-0x2038d039ea1308e5:pn-0x203cd039ea1308e5,host_traddr=nn-0x20000024ff171d31:pn-0x21000024ff171d31 live optimized
@@ -326,7 +326,7 @@ Example (b):
 +
 ----
 # nvme list-subsys /dev/nvme0n1
-nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:subsystem.rhel_tcp_133
+nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:subsystem.rockylinux_tcp_133
 \
  +- nvme1 tcp traddr=192.168.166.21,trsvcid=4420,host_traddr=192.168.166.5 live non-optimized
  +- nvme2 tcp traddr=192.168.166.20,trsvcid=4420,host_traddr=192.168.166.5 live optimized
@@ -403,13 +403,13 @@ NSID UUID                                   Size
 
 == Known issues
 
-The NVMe-oF host configuration for RHEL 9.1 with ONTAP has the following known issues:
+The NVMe-oF host configuration for Rocky Linux 9.1 with ONTAP has the following known issues:
 
 [cols="20,40,40",options="header"]
 |===
 |NetApp Bug ID	|Title	|Description
 |1503468
-|`nvme list-subsys` command returns repeated nvme controller list for a given subsystem	|The `nvme list-subsys` command should return a unique list of nvme controllers associated to a given subsystem. In RHEL 9.1, the `nvme list-subsys` command returns nvme controllers with its respective ANA state for all namespaces that belong to a given subsystem. However, the ANA state is a per-namespace attribute therefore, it would be ideal to display unique nvme controller entries with the path state if you list the subsystem command syntax for a given namespace. 
+|`nvme list-subsys` command returns repeated nvme controller list for a given subsystem	|The `nvme list-subsys` command should return a unique list of nvme controllers associated to a given subsystem. In Rocky Linux 9.1, the `nvme list-subsys` command returns nvme controllers with its respective ANA state for all namespaces that belong to a given subsystem. However, the ANA state is a per-namespace attribute therefore, it would be ideal to display unique nvme controller entries with the path state if you list the subsystem command syntax for a given namespace. 
 |===
 
 // 2024 SEP 2, ONTAPDOC-2345
