--- a/nvme_rockylinux_94.adoc
+++ b/nvme_rockylinux_94.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
 permalink: nvme_rockylinux_94.html
-keywords: nvme, linux, rhel, red hat, enterprise
-summary: How to Configure NVMe-oF Host for RHEL 9.4 with ONTAP
+keywords: nvme, linux, rocky linux, enterprise
+summary: How to Configure NVMe-oF Host for Rocky Linux 9.4 with ONTAP
 ---
 
-= NVMe-oF host configuration for RHEL 9.4 with ONTAP
+= NVMe-oF host configuration for Rocky Linux 9.4 with ONTAP
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -14,9 +14,9 @@ summary: How to Configure NVMe-oF Host for RHEL 9.4 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-NVMe over Fabrics (NVMe-oF), including NVMe over Fibre Channel (NVMe/FC) and other transports, is supported with Red Hat Enterprise Linux (RHEL) 9.4 with Asymmetric Namespace Access (ANA). In NVMe-oF environments, ANA is the equivalent of ALUA multipathing in iSCSI and FC environments and is implemented with in-kernel NVMe multipath. 
+NVMe over Fabrics (NVMe-oF), including NVMe over Fibre Channel (NVMe/FC) and other transports, is supported with Rocky Linux 9.4 with Asymmetric Namespace Access (ANA). In NVMe-oF environments, ANA is the equivalent of ALUA multipathing in iSCSI and FC environments and is implemented with in-kernel NVMe multipath. 
 
-The following support is available for NVMe-oF host configuration for RHEL 9.4 with ONTAP:
+The following support is available for NVMe-oF host configuration for Rocky Linux 9.4 with ONTAP:
 
 * Support for NVMe over TCP (NVMe/TCP) in addition to NVMe/FC. The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 
@@ -26,7 +26,7 @@ For additional details on supported configurations, see the link:https://mysuppo
 
 == Features
 
-* RHEL 9.4 has in-kernel NVMe multipath enabled for NVMe namespaces by default; therefore, there is no need for explicit settings.
+* Rocky Linux 9.4 has in-kernel NVMe multipath enabled for NVMe namespaces by default; therefore, there is no need for explicit settings.
 * SAN booting using the NVMe/FC protocol is supported.
 
 == Known limitations
@@ -35,11 +35,11 @@ There are no known limitations.
 
 == Validate software versions
 
-You can use the following procedure to validate the minimum supported RHEL 9.4 software versions.
+You can use the following procedure to validate the minimum supported Rocky Linux 9.4 software versions.
 
 .Steps
 
-. Install RHEL 9.4 on the server. After the installation is complete, verify that you are running the specified RHEL 9.4 kernel: 
+. Install Rocky Linux 9.4 on the server. After the installation is complete, verify that you are running the specified Rocky Linux 9.4 kernel: 
 +
 ----
 # uname -r
@@ -76,7 +76,7 @@ nvme-cli-2.6-4.el9.x86_64
 libnvme-1.6-1.el9.x86_64
 ----
 
-. On the RHEL 9.4 host, check the hostnqn string at `/etc/nvme/hostnqn`:
+. On the Rocky Linux 9.4 host, check the hostnqn string at `/etc/nvme/hostnqn`:
 +
 ----
 # cat /etc/nvme/hostnqn
@@ -211,7 +211,7 @@ FCP CMPL: xb 00000629 Err 0001bd3d
 .Marvell/QLogic FC Adapter for NVMe/FC
 --
 
-The native inbox qla2xxx driver included in the RHEL 9.4 GA kernel has the latest fixes. These fixes are essential for ONTAP support. 
+The native inbox qla2xxx driver included in the Rocky Linux 9.4 GA kernel has the latest fixes. These fixes are essential for ONTAP support. 
 
 .Steps
 
@@ -387,7 +387,7 @@ nvme connect-all -t tcp -w host-traddr -a traddr
 ----
 
 [NOTE]
-Beginning with RHEL 9.4, the default setting for the NVMe/TCP `ctrl_loss_tmo` timeout is turned off. This means there is no limit on the number of retries (indefinite retry). Consequently, you don't need to manually configure a specific `ctrl_loss_tmo` timeout duration when using the `nvme connect` or `nvme connect-all` commands (option -l ). With this default behavior, the NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
+Beginning with Rocky Linux 9.4, the default setting for the NVMe/TCP `ctrl_loss_tmo` timeout is turned off. This means there is no limit on the number of retries (indefinite retry). Consequently, you don't need to manually configure a specific `ctrl_loss_tmo` timeout duration when using the `nvme connect` or `nvme connect-all` commands (option -l ). With this default behavior, the NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
 
 
 == Validate NVMe-oF
@@ -539,6 +539,6 @@ NSID       UUID                                   Size
 
 == Known issues
 
-There are no known issues for the NVMe-oF host configuration for RHEL 9.4 with ONTAP release.
+There are no known issues for the NVMe-oF host configuration for Rocky Linux 9.4 with ONTAP release.
 
 
