--- a/_include/hu/use-linux-host-utilities.adoc
+++ b/_include/hu/use-linux-host-utilities.adoc
@@ -1,3 +1,3 @@
 == Step 3: Use Linux Host Utilities
 
-link:hu_luhu_71_cmd.html[Learn about using the Linux Host Utilities]. 
+To learn about using the Host Utilities tool to mange the configuration of your ONTAP LUNs, refer to link:hu_luhu_71_cmd.html[Linux Host Utilities 7.1 command reference]. 
