--- a/hu_sles_15.adoc
+++ b/hu_sles_15.adoc
@@ -2,10 +2,9 @@
 sidebar: sidebar
 permalink: hu_sles_15.html
 keywords: host utilities, suse linux enterprise server 15, suse, linux, 15, netapp, ontap
-summary: Describes how to use SUSE Linux Enterprise Server 15 with ONTAP
+summary: Install the Linux Host Utilities on a SUSE Linux Enterprise Server 15 to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-
-= Use SUSE Linux Enterprise Server 15 with ONTAP
+= Configure SUSE Linux Enterprise Server 15 with FCP and iSCSI for ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -14,118 +13,29 @@ summary: Describes how to use SUSE Linux Enterprise Server 15 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-You can use the ONTAP SAN host configuration settings to configure SUSE Linux Enterprise Server 15  with ONTAP as the target. 
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a SUSE Linux Enterprise Server 15 host, you can use the Host Utilities to support managing FCP and iSCSI protocol operations with ONTAP LUNs.
 
-== Install the Linux Host Utilities
+include::_include/hu/install-linux-host-utilities.adoc[]
 
-include::_include/hu/reuse_hu_installing_luhu_with32.adoc[]
+== Step 2: Confirm the multipath configuration for your host
 
-include::_include/hu/reuse_hu_cloud_note.adoc[]
+You can use multipathing with SUSE Linux Enterprise Server 15 to manage ONTAP LUNs.
 
-== SAN Toolkit
+include::_include/hu/multipathing.adoc[]
 
-include::_include/hu/reuse_hu_san_toolkit.adoc[]
+include::_include/hu/use-linux-host-utilities.adoc[]
 
-== SAN Booting
+include::_include/hu/enable-san-boot-linux.adoc[]
 
-.Before you begin
-If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
+include::_include/hu/exclude-device.adoc[]
 
-include::_include/hu/reuse_hu_san_booting_steps.adoc[]
-
-== Multipathing
-
-For SUSE Linux Enterprise Server 15 the /etc/multipath.conf file must exist, but you do not need to make specific changes to the file. SUSE Linux Enterprise Server 15 is compiled with all settings required to recognize and correctly manage ONTAP LUNs.
-
-include::_include/hu/reuse_hu_multipathing.adoc[]
-
-include::_include/hu/reuse_hu_asa_configuration.adoc[]
-
-----
-# multipath -ll
-3600a0980383034466b2b4a3775474859 dm-3 NETAPP,LUN C-Mode
-size=20G features='4 queue_if_no_path pg_init_retries 50 retain_attached_hw_handle' hwhandler='1 alua' wp=rw
-|-+- policy='round-robin 0' prio=50 status=active
-| |- 1:0:8:1  sdb 8:16 active ready running
-| `- 2:0:8:1  sdd 8:48 active ready running
-`-+- policy='round-robin 0' prio=10 status=enabled
-  |- 1:0:9:1  sdc 8:32 active ready running
-  `- 2:0:9:1  sde 8:64 active ready running
-----
-
-include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
-
-include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
-
-----
-# multipath -ll
-3600a09803831347657244e527766394e dm-5 NETAPP,LUN C-Mode
-size=80G  features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
-|-+- policy='service-time 0' prio=50 status=enabled
-| |- 11:0:1:0 sdj 8:144 active ready running
-| |- 11:0:2:0 sdr 65:16 active ready running
-`-+- policy='service-time 0' prio=10 status=enabled
- |- 11:0:0:0 sdb 8:i6 active ready running
- |- 12:0:0:0 sdz 65:144 active ready running
-----
-
-include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
-
-== Recommended Settings
-
-SUSE Linux Enterprise Server 15 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly.
-include::_include/hu/reuse_hu_recommended_settings.adoc[]
-
-
-[cols=2*,options="header"]
-|===
-| Parameter
-| Setting
-| detect_prio | yes
-| dev_loss_tmo | "infinity"
-| failback | immediate
-| fast_io_fail_tmo | 5
-| features | "2 pg_init_retries 50"
-| flush_on_last_del | "yes"
-| hardware_handler | "0"
-| no_path_retry | queue
-| path_checker | "tur"
-| path_grouping_policy | "group_by_prio"
-| path_selector | "service-time 0"
-| polling_interval | 5
-| prio | "ontap"
-| product | LUN.*
-| retain_attached_hw_handler | yes
-| rr_weight | "uniform"
-| user_friendly_names | no
-| vendor | NETAPP
-|===
-
-.Example
-
-The following example shows how to correct an overridden default. In this case, the `multipath.conf` file defines values for `path_checker` and `no_path_retry` that are not compatible with ONTAP LUNs. If they cannot be removed because of other SAN arrays still attached to the host, these parameters can be corrected specifically for ONTAP LUNs with a device stanza.
-
-----
-defaults {
-   path_checker      readsector0
-   no_path_retry      fail
-}
-
-devices {
-   device {
-      vendor         "NETAPP  "
-      product         "LUN.*"
-      no_path_retry     queue
-      path_checker      tur
-   }
-}
-----
+include::_include/hu/customize-parameters.adoc[]
 
 include::_include/hu/hu-asm-mirroring.adoc[]
 
 == Known issues
 
-The SUSE Linux Enterprise Server 15 with ONTAP release has the following known issues:
+The SUSE Linux Enterprise Server 15 with ONTAP release has the following known issue:
 
 [cols=3*,options="header"]
 |===
