--- a/_include/hu/rhel-multipathing.adoc
+++ b/_include/hu/rhel-multipathing.adoc
@@ -2,7 +2,7 @@ To ensure that multipathing is configured correctly for your host, verify that t
 
 .Steps 
 
-. Verify that the `/etc/multipath.conf` file exits. If the file doesn't exist, create an empty, zero-byte file:
+. Verify that the `/etc/multipath.conf` file exists. If the file doesn't exist, create an empty, zero-byte file:
 +
 [source,cli]
 ----
