--- a/hu-rl-810.adoc
+++ b/hu-rl-810.adoc
@@ -13,7 +13,7 @@ summary: Install the Linux Host Utilities on a Rocky Linux 8.10 host to manage F
 :imagesdir: ./media/
 
 [.lead]
-The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Rocky Linux 8.10 host, you can use the Host Utilities to support managing FCP and iSCSI protocol operations with ONTAP LUNs.
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Rocky Linux 8.10 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
 include::_include/hu/install-linux-host-utilities.adoc[]
 
