--- a/hu_sles_15SP6.adoc
+++ b/hu_sles_15SP6.adoc
@@ -13,7 +13,7 @@ summary: Install the Linux Host Utilities on a SUSE Linux Enterprise Server 15 S
 :imagesdir: ./media/
 
 [.lead]
-The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a SUSE Linux Enterprise Server 15 SP6 host, you can use the Host Utilities to support managing FCP and iSCSI protocol operations with ONTAP LUNs.
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a SUSE Linux Enterprise Server 15 SP6 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
 include::_include/hu/install-linux-host-utilities.adoc[]
 
