--- a/nvme_rockylinux_95.adoc
+++ b/nvme_rockylinux_95.adoc
@@ -5,7 +5,7 @@ keywords: nvme, linux, rocky linux, enterprise
 summary: How to Configure NVMe-oF Host for Rocky Linux 9.5 with ONTAP
 ---
 
-= NVMe-oF host configuration for Rocky Linux 9.5 with ONTAP
+= Configure Rocky Linux 9.5 with NVMe-oF for ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -14,242 +14,32 @@ summary: How to Configure NVMe-oF Host for Rocky Linux 9.5 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-include::_include/nvme/reuse-nvme-introduction.adoc[]
+You can configure Rocky Linux 9.5 with NVMe protocols to manage ONTAP LUNs.
+[.lead]
+include::_include\nvme\nvme-introduction.adoc[] 
 
 .About this task 
 You can use the following support and features with the NVMe-oF host configuration for Rocky Linux 9.5. You should also review the known limitations before starting the configuration process.
 
 * Support available:
 ** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
-** Running both NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices for SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
+** Running NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices for SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
 +
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 * Features available:
-** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVMe-oF. You can use secure in-band authentication for NVMe-oF with Rocky Linux 9.5.
+** Beginning with ONTAP 9.12.1, you can use secure in-band authentication for NVMe-oF with Rocky Linux 9.5.
 ** Rocky Linux 9.5 enables in-kernel NVMe multipath for NVMe namespaces by default, removing the need for explicit settings.
-** Support for SAN booting using the NVMe/FC protocol.
+** You can use SAN booting with the NVMe/FC protocol.
 * Known limitations: 
 ** There are no known limitations.
 
-== Validate software versions
+include::_include\nvme\nvme-validate-software-versions.adoc[] 
 
-You can use the following procedure to validate the minimum supported Rocky Linux 9.5 software versions.
+include::_include\nvme\nvme-configure-nvme-fc.adoc[]
 
-.Steps
+include::_include\nvme\nvme-enable-san-boot.adoc[]
 
-. Install Rocky Linux 9.5 on the server. After the installation is complete, verify that you are running the specified Rocky Linux 9.5 kernel: 
-+
-----
-uname -r
-----
-+
-----
-5.14.0-503.11.1.el9_5.x86_64
-----
-
-. Install the `nvme-cli` package:
-+
-----
-rpm -qa|grep nvme-cli
-----
-+
-----
-nvme-cli-2.9.1-6.el9.x86_64
-----
-
-. Install the `libnvme` package:
-+
-----
-rpm -qa|grep libnvme
-----
-+
-----
-libnvme-1.9-3.el9.x86_64
-----
-
-. On the Rocky Linux 9.5 host, check the hostnqn string at `/etc/nvme/hostnqn`:
-+
-----
-cat /etc/nvme/hostnqn
-----
-+
-----
-nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048-b9c04f425633
-----
-
-. Verify that the `hostnqn` string matches the `hostnqn` string for the corresponding subsystem on the ONTAP array:
-+
-----
-::> vserver nvme subsystem host show -vserver vs_coexistence_LPE36002
-----
-+
-.Show example
-[%collapsible]
-====
-----
-Vserver Subsystem Priority  Host NQN
-------- --------- --------  ------------------------------------------------
-vs_coexistence_LPE36002
-        nvme
-                  regular   nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048-b9c04f425633
-        nvme_1
-                  regular   nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048-b9c04f425633
-        nvme_2
-                  regular   nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048-b9c04f425633
-        nvme_3
-                  regular   nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048-b9c04f425633
-4 entries were displayed.
-----
-====
-+
-[NOTE]
-If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP array subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
-
-
-== Configure NVMe/FC
-
-You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. For NVMe/FC configured with a Broadcom adapter, you can enable I/O requests of size 1MB.
-
-[role="tabbed-block"]
-====
-.Broadcom/Emulex
---
-.Steps
-
-. Verify that you are using the supported adapter model: 
-
-.. `cat /sys/class/scsi_host/host*/modelname`
-+
-----
-LPe36002-M64 
-LPe36002-M64
-----
-
-.. `cat /sys/class/scsi_host/host*/modeldesc`
-+
-----
-Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter 
-Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter
-----
-
-. Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver: 
-
-.. `cat /sys/class/scsi_host/host*/fwrev` 
-+
-----
-14.4.317.10, sli-4:6:d
-14.4.317.10, sli-4:6:d
-----
-
-.. `cat /sys/module/lpfc/version` 
-+
-----
-0:14.4.0.2
-----
-
-+
-For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
-
-. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
-+
-`cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type`
-+
-----
-3
-----
-
-. Verify that you can view your initiator ports:
-
-+
-`cat /sys/class/fc_host/host*/port_name`
-+
----- 
-0x100000109bf044b1
-0x100000109bf044b2
-----
-
-. Verify that your initiator ports are online:
-+
-`cat /sys/class/fc_host/host*/port_state`
-+
-----
-Online
-Online
-----
-
-. Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
-+
-`cat /sys/class/scsi_host/host*/nvme_info`
-+
-.Show example
-[%collapsible]
-=====
-[subs=+quotes]
-----
-NVME Initiator Enabled
-XRI Dist lpfc2 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc2 WWPN x100000109bf044b1 WWNN x200000109bf044b1 DID x022a00 *ONLINE*
-NVME RPORT       WWPN x202fd039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x021310 *TARGET DISCSRVC ONLINE*
-NVME RPORT       WWPN x202dd039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x020b10 *TARGET DISCSRVC ONLINE*
-
-NVME Statistics
-LS: Xmt 0000000810 Cmpl 0000000810 Abort 00000000
-LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
-Total FCP Cmpl 000000007b098f07 Issue 000000007aee27c4 OutIO ffffffffffe498bd
-        abort 000013b4 noxri 00000000 nondlp 00000058 qdepth 00000000 wqerr 00000000 err 00000000
-FCP CMPL: xb 000013b4 Err 00021443
-
-NVME Initiator Enabled
-XRI Dist lpfc3 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc3 WWPN x100000109bf044b2 WWNN x200000109bf044b2 DID x021b00 *ONLINE*
-NVME RPORT       WWPN x2033d039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x020110 *TARGET DISCSRVC ONLINE*
-NVME RPORT       WWPN x2032d039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x022910 *TARGET DISCSRVC ONLINE*
-
-NVME Statistics
-LS: Xmt 0000000840 Cmpl 0000000840 Abort 00000000
-LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
-Total FCP Cmpl 000000007afd4434 Issue 000000007ae31b83 OutIO ffffffffffe5d74f
-        abort 000014a5 noxri 00000000 nondlp 0000006a qdepth 00000000 wqerr 00000000 err 00000000
-FCP CMPL: xb 000014a5 Err 0002149a
-----
-=====
-
---
-
-.Marvell/QLogic
---
-
-Configure NVMe/FC for a Marvell/QLogic adapter.
-
-NOTE: The native inbox qla2xxx driver included in the Rocky Linux 9.5 GA kernel has the latest fixes. These fixes are essential for ONTAP support. 
-
-.Steps
-
-. Verify that you are running the supported adapter driver and firmware versions:
-+
-----
-cat /sys/class/fc_host/host*/symbolic_name
-----
-+
-----
-QLE2742 FW:v9.14.00 DVR:v10.02.09.200-k
-QLE2742 FW:v9.14.00 DVR:v10.02.09.200-k
-----
-
-. Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
-+
-----
-cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
-----
-+
-The expected ouptut is 1.
---
-====
-
-=== Enable 1MB I/O (Optional)
-
-include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
-
+include::_include\nvme\nvme-configure-nvme-tcp.adoc[]
 
 == Configure NVMe/TCP
 
